added text exercise for Savoir-Connaitre

--- a/french/pages/exercise_savoir_connaitre.html
+++ b/french/pages/exercise_savoir_connaitre.html
@@ -355,6 +355,178 @@
                     </section>
                 </li>
 
+                <li>
+                    <section>
+                        <h4>Complétez ces phrases avec <i>savoir</i> ou <i>connaître</i>.</h4>
+
+                        <ol>
+                            <li>
+                                Depuis que j’ai visité la ville de Québec, je
+                                <input type="text" pattern="connais">
+                                <b title="connais">l’Hôtel</b> de la ville.
+                            </li>
+
+                            <li>
+                                Pouvez-vous résumer la situation. Je ne
+                                <input type="text" pattern="sais">
+                                pas de <b title="sais">quoi</b> vous parlez en ce moment.
+                            </li>
+
+                            <li>
+                                Nous avons rencontré des touristes qui ne
+                                <input type="text" pattern="savaient">
+                                pas <b title="savaient">comment</b> se rendre au centre commercial.
+                            </li>
+
+                            <li>
+                                Tous les membres de la famille
+                                <input type="text" pattern="connaissent">
+                                <b title="connaissent">l’opinion</b> de grand-père sur la situation politique.
+                            </li>
+
+                            <li>
+                                Depuis que j’y suis allée, je
+                                <input type="text" pattern="connais">
+                                la <b title="connais">Corse et la Côte d’Azur</b>.
+                            </li>
+
+                            <li>
+                                <input type="text" pattern="Sais">
+                                -tu toutes les <b title="Sais">paroles</b> de cette chanson ?
+                                Pourrais-tu les chanter ?
+                            </li>
+
+                            <li>
+                                Les habitants de ce pays
+                                <input type="text" pattern="connaissent">
+                                la <b title="connaissent">dictature</b>.
+                            </li>
+
+                            <li>
+                                <input type="text" pattern="Sais">
+                                -tu la <b title="Sais">date</b> du début du cours ?
+                            </li>
+
+                            <li>
+                                Comment
+                                <input type="text" pattern="sais">
+                                -tu <b title="sais">qu</b>’il lui a tout avoué ?
+                            </li>
+
+                            <li>
+                                <input type="text" pattern="Connaissez">
+                                -vous le <b title="Connaissez">campus</b>
+                                de cette université ? L’avez-vous visité ?
+                            </li>
+                        </ol>
+                    </section>
+                </li>
+
+                <li>
+                    <section>
+                        <h4>Complétez ces phrases avec <i>savoir</i> ou <i>connaître</i>.</h4>
+
+                        <ol>
+                            <li>
+                                Je
+                                <input type="text" pattern="sais">
+                                à <b title="sais">quoi</b> vous pensez.
+                            </li>
+
+                            <li>
+                                <input type="text" pattern="Connaissez">
+                                -vous ce <b title="Connaissez">poème</b> ? Mon frère <b title="sait">le</b>
+                                <input type="text" pattern="sait">
+                                par cœur.
+                            </li>
+
+                            <li>
+                                Ils ne
+                                <input type="text" pattern="sait">
+                                pas <b title="sait">comment</b> préparer ce repas.
+                            </li>
+
+                            <li>
+                                <input type="text" pattern="Connais">
+                                -tu la <b title="Connais">statue</b> de la liberté ?
+                            </li>
+
+                            <li>
+                                Nous
+                                <input type="text" pattern="savons">
+                                <b title="savons">qu</b>’ils se rendront d’abord au centre-ville.
+                            </li>
+
+                            <li>
+                                Tu
+                                <input type="text" pattern="connais">
+                                mon <b title="connais">amie</b> Angèle, n’est-ce pas ?
+                            </li>
+
+                            <li>
+                                <input type="text" pattern="Savez">
+                                -vous <b title="Savez">l’heure</b> qu’il est ?
+                            </li>
+
+                            <li>
+                                Les enfants ne voudront pas t’écouter.
+                                Je <b title="sais">le</b>
+                                <input type="text" pattern="sais">
+                                .
+                            </li>
+
+                            <li>
+                                Daisy
+                                <input type="text" pattern="sait">
+                                <b title="sait">parler</b> norvégien.
+                            </li>
+
+                            <li>
+                                Justin
+                                <input type="text" pattern="connaît">
+                                bien la <b title="connaît">vie</b> privée de notre Premier ministre.
+                            </li>
+
+                            <li>
+                                Vous
+                                <input type="text" pattern="savez">
+                                <b title="savez">qui</b> a gagné la partie ?
+                            </li>
+
+                            <li>
+                                Rémi
+                                <input type="text" pattern="connait">
+                                bien le <b title="connait">vin</b>. Il
+                                <input type="text" pattern="sait">
+                                <b title="sait">comment</b> on le fait.
+                            </li>
+
+                            <li>
+                                Elle
+                                <input type="text" pattern="connaît">
+                                nos <b title="connaît">habitudes</b> ; elle
+                                <input type="text" pattern="sait">
+                                à quelle <b title="sait">heure</b> nous mangeons chaque soir.
+                            </li>
+
+                            <li>
+                                Vous
+                                <input type="text" pattern="connaissez">
+                                les <b title="connaissez">champignons</b> séchés. Est-ce que vous
+                                <input type="text" pattern="savez">
+                                <b title="savez">comment</b> les apprêter ?
+                            </li>
+
+                            <li>
+                                Depuis peu, je
+                                <input type="text" pattern="connais">
+                                cette <b title="connais">variété</b> de fleurs exotiques.
+                            </li>
+
+                        </ol>
+                    </section>
+                </li>
+
             </ol>
 
             <iframe src="partials/errorCounter.html"
