--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -85,7 +85,7 @@
                         <th data-key="A1" class="A1 conjugations conjugations-plus others" colspan="11">A1</th>
                         <th data-key="A2" class="A2 conjugations conjugations-plus others tense-sequence" colspan="16">
                             A2</th>
-                        <th data-key="B1" class="B1 conjugations tense-sequence others" colspan="10">B1</th>
+                        <th data-key="B1" class="B1 conjugations tense-sequence others" colspan="11">B1</th>
                         <th data-key="B2" class="B2 conjugations conjugations-plus tense-sequence others" colspan="12">
                             B2</th>
                     </tr>
@@ -140,6 +140,8 @@
                         <th class="B1 others" colspan="1">Qui Que Dont Où</th>
                         <th data-key="exercise_conditionalpresent.html conjugations.html?Le%20conditionnel%20pr%C3%A9sent"
                             class="B1 conjugations" colspan="2">conditionnel présent</th>
+                        <th data-key="exercise_savoir_connaitre.html" class="B1 others" colspan="1">Savoir ou Connaître
+                        </th>
                         <th data-key="exercise_presentsubjunctive.html conjugations.html?Le%20subjonctif%20pr%C3%A9sent"
                             class="B1 conjugations" colspan="2">subjonctif présent</th>
 
@@ -227,6 +229,8 @@
                         </th>
                         <th class="B1 conjugations"><a href="exercise_conditionalpresent.html">texte</a><small>*</small>
                         </th>
+
+                        <th class="B1 others"><a href="exercise_savoir_connaitre.html">texte</a></th>
 
                         <!-- subjonctif présent -->
                         <th class="B1 conjugations"><a href="conjugations.html?Le%20subjonctif%20pr%C3%A9sent">liste</a>
@@ -319,6 +323,8 @@
                             <td class="B1 conjugations" data-key="conjugations.html?Le%20conditionnel%20pr%C3%A9sent">
                             </td>
                             <td class="B1 conjugations" data-key="exercise_conditionalpresent.html"></td>
+
+                            <td class="B1 others" data-key="exercise_savoir_connaitre.html"></td>
 
                             <td class="B1 conjugations" data-key="conjugations.html?Le%20subjonctif%20pr%C3%A9sent">
                             </td>
