--- a/french/index.html
+++ b/french/index.html
@@ -307,6 +307,13 @@
     <a href="pages/exercise_savoir_connaitre.html">exercice de texte</a>
   </div>
 
+  <div class="card">
+    <span class="cefr">B2</span>
+    <header>Apporter ou Emporter, Amener ou Emmener</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_amener_emmener.html">exercice de texte</a>
+  </div>
+
   <hr />
 
   <h3>
