moved IL-EST from A1 to A2. Added section Vocabulary to index page

--- a/french/index.html
+++ b/french/index.html
@@ -190,13 +190,6 @@
 
   <div class="card">
     <span class="cefr">A1</span>
-    <header>Il est, c'est</header>
-    <a class="theory">théorie</a>
-    <a href="pages/exercise_il_est.html">exercice de texte</a>
-  </div>
-
-  <div class="card">
-    <span class="cefr">A1</span>
     <header>De, du, des</header>
     <a class="theory">théorie</a>
     <a href="pages/exercise_de_du_des.html">exercice de texte</a>
@@ -281,13 +274,6 @@
 
   <div class="card">
     <span class="cefr">B1</span>
-    <header>Tout</header>
-    <a class="theory">théorie</a>
-    <a href="pages/exercise_tout.html">exercice de texte</a>
-  </div>
-
-  <div class="card">
-    <span class="cefr">B1</span>
     <header>Que ou Dont</header>
     <a class="theory">théorie</a>
     <a href="pages/exercise_que_dont.html">exercice de texte</a>
@@ -298,6 +284,25 @@
     <header>Qui, Que, Dont, Où</header>
     <a class="theory">théorie</a>
     <a href="pages/exercise_qui_que_dont_ou.html">exercice de texte</a>
+  </div>
+
+
+  <hr />
+
+  <h2>Le vocabulaire</h2>
+
+  <div class="card">
+    <span class="cefr">A2</span>
+    <header>Il est, c'est</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_il_est.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <span class="cefr">B1</span>
+    <header>Tout</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_tout.html">exercice de texte</a>
   </div>
 
   <div class="card">
