--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -82,8 +82,8 @@
                     <tr>
                         <th data-key="date" rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
-                        <th data-key="A1" class="A1 conjugations conjugations-plus others" colspan="11">A1</th>
-                        <th data-key="A2" class="A2 conjugations conjugations-plus others tense-sequence" colspan="16">
+                        <th data-key="A1" class="A1 conjugations conjugations-plus others" colspan="10">A1</th>
+                        <th data-key="A2" class="A2 conjugations conjugations-plus others tense-sequence" colspan="15">
                             A2</th>
                         <th data-key="B1" class="B1 conjugations tense-sequence others" colspan="11">B1</th>
                         <th data-key="B2" class="B2 conjugations conjugations-plus tense-sequence others" colspan="12">
@@ -96,7 +96,6 @@
                         <th data-key="exercise_devoir_pouvoir_falloir_vouloir.html" class="A1 conjugations-plus"
                             colspan="1">Devoir Vouloir Pouvoir Falloir</th>
                         <th data-key="exercise_mon_ton_son.html" class="A1 others" colspan="1">Mon Ton Son</th>
-                        <th data-key="exercise_il_est.html" class="A1 others" colspan="1">Il&nbsp;est C'est</th>
                         <th data-key="exercise_de_du_des.html" class="A1 others" colspan="1">De Du Des</th>
                         <th data-key="exercise_ce_ces_cet.html" class="A1 others" colspan="1">Ce Ces Cet</th>
                         <th data-key="exercise_quand_comment_combien.html" class="A1 others" colspan="1">Quand Comment
@@ -109,6 +108,7 @@
                         <!-- A2 -->
                         <th data-key="exercise_avoir_etre.html" class="A2 conjugations-plus" colspan="1">Avoir ou Être
                         </th>
+                        <th data-key="exercise_il_est.html" class="A2 others" colspan="1">Il&nbsp;est ou C'est</th>
                         <th data-key="exercise_mien_sien.html" class="A2 others" colspan="1">Mien Sien</th>
                         <th data-key="exercise_imperfect.html conjugations.html?L%27imparfait" class="A2 conjugations"
                             colspan="2">imparfait</th>
@@ -174,7 +174,6 @@
                         </th>
 
                         <th class="A1 others"><a href="exercise_mon_ton_son.html">texte</a></th>
-                        <th class="A1 others"><a href="exercise_il_est.html">texte</a></th>
                         <th class="A1 others"><a href="exercise_de_du_des.html">texte</a></th>
                         <th class="A1 others"><a href="exercise_ce_ces_cet.html">texte</a></th>
 
@@ -189,6 +188,7 @@
 
                         <!-- A2 -->
                         <th class="A2 conjugations-plus"><a href="exercise_avoir_etre.html">texte</a></th>
+                        <th class="A2 others"><a href="exercise_il_est.html">texte</a></th>
                         <th class="A2 others"><a href="exercise_mien_sien.html">texte</a></th>
                         <!-- imparfait -->
                         <th class="A2 conjugations"><a href="conjugations.html?L%27imparfait">liste</a></th>
@@ -276,7 +276,6 @@
                             <td class="A1 conjugations-plus" data-key="exercise_devoir_pouvoir_falloir_vouloir.html">
                             </td>
                             <td class="A1 others" data-key="exercise_mon_ton_son.html"></td>
-                            <td class="A1 others" data-key="exercise_il_est.html"></td>
                             <td class="A1 others" data-key="exercise_de_du_des.html"></td>
                             <td class="A1 others" data-key="exercise_ce_ces_cet.html"></td>
                             <td class="A1 others" data-key="exercise_quand_comment_combien.html"></td>
@@ -289,6 +288,7 @@
 
                             <!-- A2 -->
                             <td class="A2 conjugations-plus" data-key="exercise_avoir_etre.html"></td>
+                            <td class="A2 others" data-key="exercise_il_est.html"></td>
                             <td class="A2 others" data-key="exercise_mien_sien.html"></td>
 
                             <td class="A2 conjugations" data-key="conjugations.html?L%27imparfait"></td>
