added Amener-Emmener to stats page

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -83,9 +83,9 @@
                         <th data-key="date" rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
                         <th data-key="A1" class="A1 conjugations conjugations-plus others" colspan="10">A1</th>
-                        <th data-key="A2" class="A2 conjugations conjugations-plus others tense-sequence" colspan="15">
+                        <th data-key="A2" class="A2 conjugations conjugations-plus others tense-sequence" colspan="17">
                             A2</th>
-                        <th data-key="B1" class="B1 conjugations tense-sequence others" colspan="11">B1</th>
+                        <th data-key="B1" class="B1 conjugations tense-sequence others" colspan="12">B1</th>
                         <th data-key="B2" class="B2 conjugations conjugations-plus tense-sequence others" colspan="12">
                             B2</th>
                     </tr>
@@ -140,8 +140,11 @@
                         <th class="B1 others" colspan="1">Qui Que Dont Où</th>
                         <th data-key="exercise_conditionalpresent.html conjugations.html?Le%20conditionnel%20pr%C3%A9sent"
                             class="B1 conjugations" colspan="2">conditionnel présent</th>
-                        <th data-key="exercise_savoir_connaitre.html" class="B1 others" colspan="1">Savoir ou Connaître
+                        <th data-key="exercise_savoir_connaitre.html" class="B1 others" colspan="1">Savoir<br /> ou
+                            Connaître
                         </th>
+                        <th data-key="exercise_amener_emmener.html" class="B1 others" colspan="1">Apporter, Emporter,
+                            Amener, Emmener</th>
                         <th data-key="exercise_presentsubjunctive.html conjugations.html?Le%20subjonctif%20pr%C3%A9sent"
                             class="B1 conjugations" colspan="2">subjonctif présent</th>
 
@@ -231,6 +234,7 @@
                         </th>
 
                         <th class="B1 others"><a href="exercise_savoir_connaitre.html">texte</a></th>
+                        <th class="B1 others"><a href="exercise_amener_emmener.html">texte</a></th>
 
                         <!-- subjonctif présent -->
                         <th class="B1 conjugations"><a href="conjugations.html?Le%20subjonctif%20pr%C3%A9sent">liste</a>
@@ -325,6 +329,7 @@
                             <td class="B1 conjugations" data-key="exercise_conditionalpresent.html"></td>
 
                             <td class="B1 others" data-key="exercise_savoir_connaitre.html"></td>
+                            <td class="B1 others" data-key="exercise_amener_emmener.html"></td>
 
                             <td class="B1 conjugations" data-key="conjugations.html?Le%20subjonctif%20pr%C3%A9sent">
                             </td>
