--- a/french/pages/conjugations.html
+++ b/french/pages/conjugations.html
@@ -81,6 +81,11 @@
                         subjonctif présent
                     </label>
                     <label>
+                        <input type="checkbox" class="verb-tense-checkbox" name="presentperfectsubjunctive"
+                            checked="checked">Le
+                        subjonctif passé
+                    </label>
+                    <label>
                         <input type="checkbox" class="verb-tense-checkbox" name="conditionalperfect"
                             checked="checked">Le
                         conditionnel passé
