--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -248,7 +248,7 @@
                         <th class="B2 others">texte</th>
 
                         <!-- subjonctif passé -->
-                        <th class="B2 conjugations">liste</th>
+                        <th class="B2 conjugations"><a href="conjugations.html?Le%20subjonctif%20passé">liste</a></th>
                         <th class="B2 conjugations">texte</th>
 
                         <!-- conditionnel passé -->
