fine-tune Ceci-Cela-Celui

--- a/french/pages/exercise_ceci_cela_celui.html
+++ b/french/pages/exercise_ceci_cela_celui.html
@@ -30,7 +30,7 @@
                     <section>
                         <h4> Complétez avec l’adjectif ou le pronom, selon le modèle.</h4>
 
-                        <ol>
+                        <ol class="medium-input">
                             <li>
                                 <i>Ce</i> livre (m) est de Rousseau, <i>celui-ci/là</i> est de Voltaire.
                             </li>
@@ -248,7 +248,7 @@
                             <i>celle</i>, <i>celles</i> ou <i>ce</i>.
                         </h4>
 
-                        <ol class="short-input">
+                        <ol class="medium-input">
                             <li>
                                 <input type="text" pattern="Celui">
                                 <b title="Celui">ou</b>
