--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -121,7 +121,7 @@
                             title="prépositions de temps">prép. de temps</th>
                         <th data-key="exercise_y_en.html" class="A2 others" colspan="1">Y En</th>
                         <th data-key="exercise_qui_que.html" class="A2 others" colspan="1">Qui ou Que</th>
-                        <th class="A2 others" colspan="1">Ceci Cela Celui</th>
+                        <th data-key="exercise_ceci_cela_celui.html" class="A2 others" colspan="1">Ceci Cela Celui</th>
                         <th class="A2 others" colspan="1">Lui Leur</th>
                         <th class="A2 others" colspan="1" title="négation 1">nég.1</th>
                         <th class="A2 others" colspan="1" title="négation 2">nég.2</th>
