added text exercise for Present Perfect Subjunctive

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -249,7 +249,8 @@
 
                         <!-- subjonctif passé -->
                         <th class="B2 conjugations"><a href="conjugations.html?Le%20subjonctif%20passé">liste</a></th>
-                        <th class="B2 conjugations">texte</th>
+                        <th class="B2 conjugations"><a
+                                href="conjugations/exercise_presentperfectsubjunctive.html">texte</a><small>*</small></th>
 
                         <!-- conditionnel passé -->
                         <th class="B2 conjugations"><a href="conjugations.html?Le%20conditionnel%20passé">liste</a></th>
