fine-tuned Stats page

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -70,8 +70,6 @@
                         <label><input type="checkbox" name="B1" />B1</label>
 
                         <label><input type="checkbox" name="B2" />B2</label>
-
-                        <label><input type="checkbox" name="C1" />C1</label>
                     </div>
                 </div>
             </header>
@@ -116,7 +114,8 @@
                             <span class="full-name">imparfait - passé&nbsp;composé</span>
                             <span class="short-name" title="imparfait - passé composé">i.-p.c.</span>
                         </th>
-                        <th class="A2 conjugations" colspan="2">futur simple</th>
+                        <th data-key="conjugations.html?Le%20futur%20simple" class="A2 conjugations" colspan="2">futur
+                            simple</th>
                         <th data-key="exercise_time_prepositions.html" class="A2 others" colspan="1"
                             title="prépositions de temps">prép. de temps</th>
                         <th data-key="exercise_y_en.html" class="A2 others" colspan="1">Y En</th>
@@ -250,7 +249,8 @@
                         <!-- subjonctif passé -->
                         <th class="B2 conjugations"><a href="conjugations.html?Le%20subjonctif%20passé">liste</a></th>
                         <th class="B2 conjugations"><a
-                                href="conjugations/exercise_presentperfectsubjunctive.html">texte</a><small>*</small></th>
+                                href="conjugations/exercise_presentperfectsubjunctive.html">texte</a><small>*</small>
+                        </th>
 
                         <!-- conditionnel passé -->
                         <th class="B2 conjugations"><a href="conjugations.html?Le%20conditionnel%20passé">liste</a></th>
