--- a/french/pages/conjugations/exercise_presentperfectsubjunctive.html
+++ b/french/pages/conjugations/exercise_presentperfectsubjunctive.html
@@ -113,11 +113,10 @@
                     <section class="span-half">
                         <h4>Faites des phrases selon le modèle à partir des éléments donnés.</h4>
 
-                        <div>
+                        <div class="example">
                             <span>
                                 Il n’a pas neigé... On a eu de la chance !
-                                <span class="whitespace"></span>
-                                --->
+                                &nbsp;&nbsp;&nbsp; --->
                             </span>
                             <span>On a eu de la chance qu’il n’ait pas neigé !</span>
                         </div>
