--- a/french/pages/exercise_imperative.html
+++ b/french/pages/exercise_imperative.html
@@ -30,7 +30,7 @@
                     <section class="span-half">
                         <h4>Transformez ces phrases à la forme négative.</h4>
 
-                        <div>
+                        <div class="example">
                             <span>
                                 Buvez cette eau.
                                 <span class="whitespace"></span>
@@ -72,7 +72,7 @@
                     <section class="span-half">
                         <h4>Transformez ces phrases à l’impératif négatif.</h4>
 
-                        <div>
+                        <div class="example">
                             <span>
                                 Tu veux chanter.
                                 <span class="whitespace"></span>
@@ -114,7 +114,7 @@
                     <section class="span-half">
                         <h4>Faites comme l’exemple qui suit.</h4>
 
-                        <div>
+                        <div class="example">
                             <span>
                                 Vous devez vous lever.
                                 <span class="whitespace"></span>
@@ -155,7 +155,7 @@
                     <section class="span-half">
                         <h4>Transformez ces phrases à la forme négative.</h4>
 
-                        <div>
+                        <div class="example">
                             <span>
                                 Écoute-moi !
                                 <span class="whitespace"></span>
@@ -196,7 +196,7 @@
                     <section class="span-third">
                         <h4>Transformez ces phrases à l’impératif négatif.</h4>
 
-                        <div>
+                        <div class="example">
                             <span>
                                 Je mange des fruits ?
                                 <span class="whitespace-mini"></span>
@@ -245,7 +245,7 @@
                     <section class="span-third">
                         <h4>Faites comme l’exemple qui suit.</h4>
 
-                        <div>
+                        <div class="example">
                             <span>
                                 Va à ta place !
                                 <span class="whitespace-mini"></span>
