--- a/french/pages/exercise_passive.html
+++ b/french/pages/exercise_passive.html
@@ -28,7 +28,7 @@
             <ol class="nested">
                 <li>
                     <section class="span-half">
-                        <h4> Écrivez ces phrases à la forme passive.</h4>
+                        <h4>Écrivez ces phrases à la forme passive.</h4>
 
                         <div class="example">
                             <span>
@@ -48,8 +48,7 @@
 
                             <li>
                                 <span title="Les plans de maison sont dessinés par l'architecte.">L’architecte dessine
-                                    les
-                                    plans de maison.</span>
+                                    les plans de maison.</span>
                                 <span><input type="text"
                                         pattern="Les plans de maison sont dessinés par l'architecte[.]?"></span>
                             </li>
