--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -83,7 +83,7 @@
                         <th data-key="A1" class="A1 conjugations conjugations-plus others" colspan="10">A1</th>
                         <th data-key="A2" class="A2 conjugations conjugations-plus others tense-sequence" colspan="17">
                             A2</th>
-                        <th data-key="B1" class="B1 conjugations tense-sequence others" colspan="12">B1</th>
+                        <th data-key="B1" class="B1 conjugations tense-sequence others" colspan="13">B1</th>
                         <th data-key="B2" class="B2 conjugations conjugations-plus tense-sequence others" colspan="12">
                             B2</th>
                     </tr>
@@ -106,6 +106,7 @@
                         <!-- A2 -->
                         <th data-key="exercise_avoir_etre.html" class="A2 conjugations-plus" colspan="1">Avoir ou Être
                         </th>
+                        <th data-key="exercise_adjectives.html" class="A2 others" colspan="1">adjectif</th>
                         <th data-key="exercise_il_est.html" class="A2 others" colspan="1">Il&nbsp;est ou C'est</th>
                         <th data-key="exercise_mien_sien.html" class="A2 others" colspan="1">Mien Sien</th>
                         <th data-key="exercise_imperfect.html conjugations.html?L%27imparfait" class="A2 conjugations"
@@ -120,7 +121,6 @@
                             title="prépositions de temps">prép. de temps</th>
                         <th data-key="exercise_y_en.html" class="A2 others" colspan="1">Y En</th>
                         <th data-key="exercise_qui_que.html" class="A2 others" colspan="1">Qui ou Que</th>
-                        <th data-key="exercise_ceci_cela_celui.html" class="A2 others" colspan="1">Ceci Cela Celui</th>
                         <th class="A2 others" colspan="1">Lui Leur</th>
                         <th class="A2 others" colspan="1" title="négation 1">nég.1</th>
                         <th class="A2 others" colspan="1" title="négation 2">nég.2</th>
@@ -134,6 +134,7 @@
                             <span class="short-name"
                                 title="imparfait - passé composé - plus-que-parfait">i-pc-pqp</span>
                         </th>
+                        <th data-key="exercise_ceci_cela_celui.html" class="B1 others" colspan="1">Ceci Cela Celui</th>
                         <th data-key="exercise_tout.html" class="B1 others" colspan="1">Tout</th>
                         <th data-key="exercise_que_dont.html" class="B1 others" colspan="1">Que ou Dont</th>
                         <th class="B1 others" colspan="1">Qui Que Dont Où</th>
@@ -190,6 +191,7 @@
 
                         <!-- A2 -->
                         <th class="A2 conjugations-plus"><a href="exercise_avoir_etre.html">texte</a></th>
+                        <th class="A2 others"><a href="vocabulary/exercise_adjectives.html">texte</a></th>
                         <th class="A2 others"><a href="exercise_il_est.html">texte</a></th>
                         <th class="A2 others"><a href="exercise_mien_sien.html">texte</a></th>
                         <!-- imparfait -->
@@ -205,7 +207,6 @@
                         <th class="A2 others"><a href="exercise_time_prepositions.html">texte</a><small>*</small></th>
                         <th class="A2 others"><a href="exercise_y_en.html">texte</a><small>*</small></th>
                         <th class="A2 others"><a href="exercise_qui_que.html">texte</a><small>*</small></th>
-                        <th class="A2 others"><a href="exercise_ceci_cela_celui.html">texte</a><small>*</small></th>
                         <th class="A2 others"><a href="exercise_lui_leur.html">texte</a><small>*</small></th>
                         <th class="A2 others"><a href="exercise_negation.html">texte</a><small>*</small></th>
                         <th class="A2 others"><a href="exercise_negation2.html">texte</a><small>*</small></th>
@@ -221,6 +222,7 @@
 
                         <th class="B1 tense-sequence"><a href="exercise_concordance3.html">texte</a></th>
 
+                        <th class="B1 others"><a href="exercise_ceci_cela_celui.html">texte</a><small>*</small></th>
                         <th class="B1 others"><a href="exercise_tout.html">texte</a></th>
                         <th class="B1 others"><a href="exercise_que_dont.html">texte</a></th>
                         <th class="B1 others"><a href="exercise_qui_que_dont_ou.html">texte</a></th>
@@ -293,6 +295,7 @@
 
                             <!-- A2 -->
                             <td class="A2 conjugations-plus" data-key="exercise_avoir_etre.html"></td>
+                            <td class="A2 others" data-key="exercise_adjectives.html"></td>
                             <td class="A2 others" data-key="exercise_il_est.html"></td>
                             <td class="A2 others" data-key="exercise_mien_sien.html"></td>
 
@@ -307,7 +310,6 @@
                             <td class="A2 others" data-key="exercise_time_prepositions.html"></td>
                             <td class="A2 others" data-key="exercise_y_en.html"></td>
                             <td class="A2 others" data-key="exercise_qui_que.html"></td>
-                            <td class="A2 others" data-key="exercise_ceci_cela_celui.html"></td>
                             <td class="A2 others" data-key="exercise_lui_leur.html"></td>
                             <td class="A2 others" data-key="exercise_negation.html"></td>
                             <td class="A2 others" data-key="exercise_negation2.html"></td>
@@ -321,6 +323,7 @@
 
                             <td class="B1 tense-sequence" data-key="exercise_concordance3.html"></td>
 
+                            <td class="B1 others" data-key="exercise_ceci_cela_celui.html"></td>
                             <td class="B1 others" data-key="exercise_tout.html"></td>
                             <td class="B1 others" data-key="exercise_que_dont.html"></td>
                             <td class="B1 others" data-key="exercise_qui_que_dont_ou.html"></td>
