fune-tuned exericse future

--- a/french/pages/exercise_future.html
+++ b/french/pages/exercise_future.html
@@ -298,8 +298,8 @@
                             <li>
                                 (<b title="J'enverrai">Je envoyer</b>)
                                 <input type="text" pattern="[Jj]'enverrai">
-                                la facture, il la (<b title="paiera">payer</b>)
-                                <input type="text" pattern="paiera">
+                                la facture, il la (<b title="payera|paiera">payer</b>)
+                                <input type="text" pattern="payera|paiera">
                                 aussitôt qu’il la (<b title="recevra">recevoir</b>)
                                 <input type="text" pattern="recevra">
                                 .
